--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>s-tet</title>
-    <link rel="icon" type="image/x-icon" href="logo/favicon.png">
+    <link rel="icon" type="image/x-icon" href="img/logo/favicon.png">
     <link href="https://fonts.googleapis.com/css?family=Lily+Script+One:regular" rel="stylesheet" />
   </head>
   <body>
